# esp-idf_lvgl_demo_C

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  button_manager.cpp  button_manager.h  config.h  idf_component.yml  main.c  main.cpp  screen_manager.cpp  screen_manager.h
main/controllers/button_manager/: button_manager.cpp  button_manager.h
main/controllers/screen_manager/: screen_manager.cpp  screen_manager.h
main/internal_components/button_manager/: CMakeLists.txt  README.md  button_manager.cpp
main/internal_components/buzzer/: CMakeLists.txt
main/internal_components/db_manager/: CMakeLists.txt
main/internal_components/fs_manager/: CMakeLists.txt
main/internal_components/leds/: CMakeLists.txt
main/internal_components/microphone/: CMakeLists.txt
main/internal_components/pedometer/: CMakeLists.txt
main/internal_components/screen_manager/: CMakeLists.txt  screen_manager.cpp  screen_manager.h
main/internal_components/sd_card/: CMakeLists.txt
main/internal_components/wifi_manager/: CMakeLists.txt
main/ui_elements/: color_grid.cpp  color_grid.h
main/views/: base_view.cpp  base_view.h  clock_view.cpp  clock_view.h  color_grid_view.cpp  color_grid_view.h  countdown_view.cpp  countdown_view.h  wifi_config.h
main/views/apps/clock/: CMakeLists.txt  README.md  clock_view.cpp  clock_view.h
main/views/system/boot_screen/: README.md  boot_view.cpp  boot_view.h
main/views/system/settings/: README.md  settings_view.cpp  settings_view.h
main/views/system/system_info/: README.md  system_info_view.cpp  system_info_view.h
